# exproc

./: CMakeLists.txt
examples/: example.txt
src/: ep.c  ep.h  ep_compute.c  ep_dbg.c  ep_derivative.c  ep_dump.c  ep_info.c  ep_main.c  ep_optimize.c  ep_parser.c  ep_substitute.c  ep_taylor.c
